--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,14 +1,9 @@
-.sidebar {
-  width: 230px;
-  height: 100%;
-  background-color: #999;
-  bottom: 0; }
-
 * {
   -webkit-tap-highlight-color: transparent; }
 
 html {
-  height: 100%; }
+  height: 100%;
+  text-align: center; }
 
 body {
   -webkit-touch-callout: none;
@@ -18,5 +13,78 @@ body {
   height: 100%;
   margin: 0;
   padding: 0; }
+
+.app {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  height: 100%; }
+
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  width: 100%;
+  min-width: 360px;
+  height: 100%;
+  background-color: #777;
+  box-sizing: border-box; }
+
+.content-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  flex: 1 1 auto;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  background-color: #111; }
+
+.content {
+  position: relative;
+  flex: 0 0 auto;
+  width: 50%;
+  min-width: 360px;
+  max-width: 600px;
+  bottom: 0;
+  background-color: #333; }
+
+.content .content-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #555; }
+
+.navigation {
+  position: relative;
+  background-color: #777;
+  position: relative;
+  flex: 0 0 auto;
+  width: 100%;
+  height: 50px; }
+
+.sidebar {
+  position: relative;
+  flex: 0 0 auto;
+  width: 230px;
+  height: 100%;
+  background-color: #999;
+  bottom: 0;
+  box-sizing: border-box; }
+
+.view {
+  position: relative;
+  flex: 1 1 auto;
+  width: 100%;
+  min-width: 360px;
+  bottom: 0;
+  background-color: #444; }
+
+.view .view-inner {
+  position: relative; }
 
 /*# sourceMappingURL=index.css.map */
