--- a/www/sass/index.sass
+++ b/www/sass/index.sass
@@ -6,6 +6,7 @@ $vendors: -webkit- -moz- -ms- -o-
         #{$prefix}#{$name}: $value
 
 $min_container_width: 360px
+$max_container_width: 600px
 
 *
     // make transparent link selection, adjust last value opacity 0 to 1.0
@@ -37,6 +38,8 @@ body
 
 .container
     position: relative
+    display: flex
+    flex-direction: column
     flex: 1 1 auto
     width: 100%
     min-width: $min_container_width
@@ -44,12 +47,16 @@ body
     background-color: #777
     box-sizing: border-box
 
-.content-body
-    background-color: #333
+.content-wrapper
     position: relative
+    display: flex
+    flex-direction: row
+    flex-wrap: nowrap
+    flex: 1 1 auto
     box-sizing: border-box
     width: 100%
     height: 100%
+    background-color: #111
 
 
 @import "content.sass"
