--- a/www/sass/navigation.sass
+++ b/www/sass/navigation.sass
@@ -1,5 +1,7 @@
 .navigation
-    background-color: #555
     position: relative
+    background-color: #777
+    position: relative
+    flex: 0 0 auto
     width: 100%
     height: 50px
