--- a/www/css/index.css
+++ b/www/css/index.css
@@ -2,8 +2,7 @@
   -webkit-tap-highlight-color: transparent; }
 
 html {
-  height: 100%;
-  text-align: center; }
+  height: 100%; }
 
 body {
   -webkit-touch-callout: none;
@@ -14,7 +13,7 @@ body {
   margin: 0;
   padding: 0; }
 
-.app {
+#app {
   position: relative;
   display: flex;
   flex-direction: row;
@@ -22,7 +21,7 @@ body {
   width: 100%;
   height: 100%; }
 
-.container {
+#container {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -33,7 +32,7 @@ body {
   background-color: #777;
   box-sizing: border-box; }
 
-.content-wrapper {
+#content {
   position: relative;
   display: flex;
   flex-direction: row;
@@ -44,47 +43,124 @@ body {
   height: 100%;
   background-color: #111; }
 
-.content {
+#list {
   position: relative;
+  display: flex;
+  padding: 7px;
+  flex-direction: column;
   flex: 0 0 auto;
   width: 50%;
   min-width: 360px;
-  max-width: 600px;
-  bottom: 0;
+  max-width: 720px;
+  height: auto;
+  box-sizing: border-box;
   background-color: #333; }
+  #list #list-inner {
+    position: relative;
+    flex: 1 1 auto;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    background-color: #555; }
 
-.content .content-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #555; }
-
-.navigation {
+#navigation {
   position: relative;
   background-color: #777;
-  position: relative;
   flex: 0 0 auto;
   width: 100%;
   height: 50px; }
+  #navigation .box {
+    display: inline-block;
+    margin: 10px; }
+  #navigation .view-open {
+    float: right; }
 
-.sidebar {
+@media screen and (min-width: 720px) {
+  #navigation .view-open {
+    display: none; } }
+@media screen and (min-width: 950px) {
+  #navigation .sidebar-open {
+    display: none; } }
+#sidebar {
   position: relative;
   flex: 0 0 auto;
+  z-index: 100;
   width: 230px;
   height: 100%;
   background-color: #999;
   bottom: 0;
   box-sizing: border-box; }
+  #sidebar .sidebar-close {
+    display: inline-block; }
 
-.view {
+@media screen and (max-width: 950px) {
+  #sidebar {
+    position: fixed;
+    transform: translateX(-230px);
+    transition: all 300ms ease; }
+
+  #sidebar[active=on] {
+    transform: translateX(0); } }
+@media screen and (min-width: 950px) {
+  #sidebar .sidebar-close {
+    display: none; } }
+#view {
   position: relative;
+  display: flex;
+  padding: 7px;
+  flex-direction: column;
   flex: 1 1 auto;
   width: 100%;
   min-width: 360px;
-  bottom: 0;
+  height: auto;
+  box-sizing: border-box;
   background-color: #444; }
+  #view #view-inner {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    width: 100%;
+    height: auto; }
+    #view #view-inner #view-navbar {
+      position: relative;
+      flex: 0 0 auto;
+      width: 100%;
+      height: 50px;
+      background-color: #888; }
+    #view #view-inner #view-content {
+      position: relative;
+      flex: 1 1 auto;
+      width: 100%;
+      height: 100%;
+      background-color: #777; }
+    #view #view-inner #view-toolbox {
+      position: relative;
+      flex: 0 0 auto;
+      width: 100%;
+      height: 50px;
+      background-color: #888; }
+  #view .box {
+    display: inline-block;
+    margin: 10px; }
 
-.view .view-inner {
-  position: relative; }
+@media screen and (max-width: 720px) {
+  #view[active=on] {
+    transform: translateX(-100%); }
+
+  #view {
+    position: fixed;
+    padding: 0;
+    top: 0;
+    height: 100%;
+    transform: translateX(0);
+    transition: all 300ms ease; }
+
+  #list {
+    padding: 0;
+    width: 100%; } }
+@media screen and (min-width: 720px) {
+  #view .nav-back {
+    display: none; } }
 
 /*# sourceMappingURL=index.css.map */
