--- a/www/sass/content.sass
+++ b/www/sass/content.sass
@@ -1,14 +1,20 @@
-.content
+#list
     position: relative
+    display: flex
+    padding: 7px
+    flex-direction: column
     flex: 0 0 auto
     width: 50%
     min-width: $min_container_width
     max-width: $max_container_width
-    bottom: 0
+    height: auto
+    box-sizing: border-box
     background-color: #333
 
-.content .content-inner
-    position: relative
-    width: 100%
-    height: 100%
-    background-color: #555
+    #list-inner
+        position: relative
+        flex: 1 1 auto
+        width: 100%
+        height: 100%
+        box-sizing: border-box
+        background-color: #555
