--- a/www/sass/index.sass
+++ b/www/sass/index.sass
@@ -1,12 +1,15 @@
+// Definitions
 $vendors: -webkit- -moz- -ms- -o-
+$sidebar_width: 230px
+$navbar_height: 50px
+$min_container_width: 360px
+$max_container_width: $min_container_width * 2
 
+// Mixin
 @mixin prefix($name, $value)
     #{$name}: $value
     @each $prefix in $vendors
         #{$prefix}#{$name}: $value
-
-$min_container_width: 360px
-$max_container_width: 600px
 
 *
     // make transparent link selection, adjust last value opacity 0 to 1.0
@@ -14,7 +17,6 @@ $max_container_width: 600px
 
 html
     height: 100%
-    text-align: center
 
 body
     // prevent callout to copy image, etc when tap to hold
@@ -28,7 +30,7 @@ body
     margin: 0
     padding: 0
 
-.app
+#app
     position: relative
     display: flex
     flex-direction: row
@@ -36,7 +38,7 @@ body
     width: 100%
     height: 100%
 
-.container
+#container
     position: relative
     display: flex
     flex-direction: column
@@ -47,7 +49,7 @@ body
     background-color: #777
     box-sizing: border-box
 
-.content-wrapper
+#content
     position: relative
     display: flex
     flex-direction: row
@@ -57,7 +59,6 @@ body
     width: 100%
     height: 100%
     background-color: #111
-
 
 @import "content.sass"
 @import "navigation.sass"
