--- a/www/sass/navigation.sass
+++ b/www/sass/navigation.sass
@@ -1,7 +1,23 @@
-.navigation
+#navigation
     position: relative
     background-color: #777
-    position: relative
     flex: 0 0 auto
     width: 100%
-    height: 50px
+    height: $navbar_height
+    .box
+        display: inline-block
+        margin: 10px
+    .view-open
+        float: right
+
+// under mobile
+@media screen and (min-width: $min_container_width * 2)
+    #navigation
+        .view-open
+            display: none
+
+// under mobile and tablet
+@media screen and (min-width: $sidebar_width + ($min_container_width * 2))
+    #navigation
+        .sidebar-open
+            display: none
