--- a/www/css/index.css
+++ b/www/css/index.css
@@ -30,7 +30,8 @@ body {
   min-width: 360px;
   height: 100%;
   background-color: #777;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05); }
 
 #content {
   position: relative;
@@ -42,6 +43,9 @@ body {
   width: 100%;
   height: 100%;
   background-color: #111; }
+
+.test {
+  transform: translate3d(60%, 0, 0) scale3d(0.85, 0.85, 1); }
 
 #list {
   position: relative;
@@ -78,9 +82,11 @@ body {
 @media screen and (min-width: 720px) {
   #navigation .view-open {
     display: none; } }
+
 @media screen and (min-width: 950px) {
   #navigation .sidebar-open {
     display: none; } }
+
 #sidebar {
   position: relative;
   flex: 0 0 auto;
@@ -98,12 +104,13 @@ body {
     position: fixed;
     transform: translateX(-230px);
     transition: all 300ms ease; }
-
   #sidebar[active=on] {
     transform: translateX(0); } }
+
 @media screen and (min-width: 950px) {
   #sidebar .sidebar-close {
     display: none; } }
+
 #view {
   position: relative;
   display: flex;
@@ -147,7 +154,6 @@ body {
 @media screen and (max-width: 720px) {
   #view[active=on] {
     transform: translateX(-100%); }
-
   #view {
     position: fixed;
     padding: 0;
@@ -155,12 +161,10 @@ body {
     height: 100%;
     transform: translateX(0);
     transition: all 300ms ease; }
-
   #list {
     padding: 0;
     width: 100%; } }
+
 @media screen and (min-width: 720px) {
   #view .nav-back {
     display: none; } }
-
-/*# sourceMappingURL=index.css.map */
