--- a/www/sass/index.sass
+++ b/www/sass/index.sass
@@ -48,6 +48,7 @@ body
     height: 100%
     background-color: #777
     box-sizing: border-box
+    transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05)
 
 #content
     position: relative
@@ -59,6 +60,10 @@ body
     width: 100%
     height: 100%
     background-color: #111
+    
+
+.test
+    transform: translate3d(60%, 0, 0) scale3d(0.85, 0.85, 1)
 
 @import "content.sass"
 @import "navigation.sass"
