--- a/www/components/recipenote.css
+++ b/www/components/recipenote.css
@@ -65,23 +65,23 @@ content {
   transform: translate3d(60%, 0, 0) scale3d(0.85, 0.85, 1); }
 
 @media screen and (max-width: 720px) {
-  view[active=on] {
+  content view[active=on] {
     transform: translateX(-100%); }
-  view {
+  content view {
     position: fixed;
     padding: 0;
     top: 0;
     height: 100%;
     transform: translateX(0);
     transition: all 300ms ease; }
-  list {
+  content list {
     padding: 0;
     width: 100%; } }
 
 @media screen and (min-width: 720px) {
   navigation .view-open {
     display: none; }
-  view .nav-back {
+  content view .nav-back {
     display: none; } }
 
 @media screen and (min-width: 950px) {
