--- a/www/components/navigation/navigation.html
+++ b/www/components/navigation/navigation.html
@@ -1,5 +1,13 @@
 <div class="panel">
-    <button class="box sidebar-open">메뉴호출</button>
-    <div class="box label-title">navigation</div>
-    <button class="box view-open">상세화면호출</button>
+    <button class="btn-default">
+        <icon></icon>
+        <title>메뉴</title>
+        <effect></effect>
+    </button>
+    <h2 class="box label-title">navigation</h2>
+    <button class="btn-default">
+        <icon></icon>
+        <title>메뉴</title>
+        <effect></effect>
+    </button>
 </div>
