--- a/app/components/navigation/navigation.sass
+++ b/app/components/navigation/navigation.sass
@@ -1,7 +1,17 @@
 @import '../common'
 
-.box
+.panel
+    height: 100%
+
+.nav-item
     display: inline-block
-    margin: 10px
+    box-sizing: border-box
+    height: 100%
+
+.btn-default default-button
+    margin: 0 0.29em
+    padding: 0.85em 0.57em
+
+
 .view-open
     float: right
