--- a/www/components/navigation/navigation.css
+++ b/www/components/navigation/navigation.css
@@ -1,6 +1,14 @@
-.box {
+.panel {
+  height: 100%; }
+
+.nav-item {
   display: inline-block;
-  margin: 10px; }
+  box-sizing: border-box;
+  height: 100%; }
+
+.btn-default default-button {
+  margin: 0 0.29em;
+  padding: 0.85em 0.57em; }
 
 .view-open {
   float: right; }
