--- a/www/components/navigation/navigation.html
+++ b/www/components/navigation/navigation.html
@@ -1,13 +1,4 @@
 <div class="panel">
-    <button class="btn-default">
-        <icon></icon>
-        <title>메뉴</title>
-        <effect></effect>
-    </button>
-    <h2 class="box label-title">navigation</h2>
-    <button class="btn-default">
-        <icon></icon>
-        <title>메뉴</title>
-        <effect></effect>
-    </button>
+    <div class="nav-item btn-default" title="메뉴"></div>
+    <!-- <h2 class="box label-title">navigation</h2> -->
 </div>
