--- a/www/components/button/button.html
+++ b/www/components/button/button.html
@@ -1,5 +1,5 @@
-<default-button>
+<button class="btn-default">
     <icon></icon>
     <span>{{title}}</span>
     <effect></effect>
-</default-button>
+</button>
