--- a/www/components/navigation/navigation.html
+++ b/www/components/navigation/navigation.html
@@ -1,4 +1,4 @@
 <div class="panel">
-    <div class="nav-item btn-default" title="메뉴"></div>
+    <div class="nav-item btn-nav" title="메뉴"></div>
     <!-- <h2 class="box label-title">navigation</h2> -->
 </div>
