--- a/www/styles.css
+++ b/www/styles.css
@@ -1,23 +1,25 @@
 * {
-  -webkit-tap-highlight-color: transparent; 
+    -webkit-tap-highlight-color: transparent; 
 }
 html {
-  height: 100%; 
+    height: 100%; 
 }
 body {
-  -webkit-touch-callout: none;
-  -webkit-text-size-adjust: none;
-  -webkit-user-select: none;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    font-family: Arial,'Helvetica Neue',Helvetica,sans-serif;
+    font-size: 14px;
+    -webkit-touch-callout: none;
+    -webkit-text-size-adjust: none;
+    -webkit-user-select: none;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 app {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  width: 100%;
-  height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 100%;
 }
