--- a/app/components/button/nav-button/nav-button.html
+++ b/app/components/button/nav-button/nav-button.html
@@ -1,8 +1,5 @@
 <button class="btn-default btn-nav">
     <icon></icon>
     <span>{{title}}</span>
-    <effect>
-        <div id="background" class="style-scope paper-ripple"></div>
-        <div id="waves" class="style-scope paper-ripple"></div>
-    </effect>
+    <effect></effect>
 </button>
