--- a/app/components/navigation/navigation.html
+++ b/app/components/navigation/navigation.html
@@ -1,4 +1,7 @@
 <div class="panel">
-    <div class="nav-item btn-nav" title="메뉴"></div>
-    <!-- <h2 class="box label-title">navigation</h2> -->
+    <span class="nav-item btn-nav menu" title="메뉴"></span>
+    <h2 class="nav-item title">Navigation</h2>
+    <span class="nav-item btn-nav sync" title="동기화"></span>
+    <span class="nav-item btn-nav search" title="서치"></span>
+    <span class="nav-item btn-nav cart" title="바구니"></span>
 </div>
