--- a/www/components/navigation/navigation.css
+++ b/www/components/navigation/navigation.css
@@ -1,10 +1,32 @@
 .panel {
+  display: flex;
+  -webkit-display: flex;
+  -moz-display: flex;
+  -ms-display: flex;
+  -o-display: flex;
   height: 100%; }
 
 .nav-item {
   display: inline-block;
   box-sizing: border-box;
   height: 100%; }
+
+.title {
+  line-height: 50px;
+  background-color: #D1D0D1;
+  padding: 0 15px; }
+
+.menu {
+  width: 60px; }
+
+.sync {
+  width: 72px; }
+
+.search {
+  width: 60px; }
+
+.cart {
+  width: 72px; }
 
 .view-open {
   float: right; }
