--- a/www/styles.css
+++ b/www/styles.css
@@ -1,8 +1,8 @@
 * {
-    -webkit-tap-highlight-color: transparent; 
+    -webkit-tap-highlight-color: transparent;
 }
 html {
-    height: 100%; 
+    height: 100%;
 }
 body {
     font-family: Arial,'Helvetica Neue',Helvetica,sans-serif;
@@ -15,6 +15,15 @@ body {
     margin: 0;
     padding: 0;
 }
+h2 {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: 0;
+    font-family: inherit;
+    vertical-align: top;
+}
+
 app {
     position: relative;
     display: flex;
