--- a/app/components/navigation/navigation.html
+++ b/app/components/navigation/navigation.html
@@ -1,7 +1,9 @@
 <div class="panel">
-    <span class="nav-item btn-nav menu" title="메뉴"></span>
+    <span class="nav-item btn-nav menu" title="M"></span>
     <h2 class="nav-item title">Navigation</h2>
-    <span class="nav-item btn-nav sync" title="동기화"></span>
-    <span class="nav-item btn-nav search" title="서치"></span>
-    <span class="nav-item btn-nav cart" title="바구니"></span>
+    <div class="btn-group">
+        <span class="nav-item btn-nav sync" title="Y"></span>
+        <span class="nav-item btn-nav search" title="S"></span>
+        <span class="nav-item btn-nav cart" title="C"></span>
+    </div>
 </div>
