--- a/app/components/navigation/navigation.sass
+++ b/app/components/navigation/navigation.sass
@@ -8,16 +8,24 @@
     box-sizing: border-box
     height: 100%
 .title
+    width: 100%
     line-height: $navbar_height
     background-color: #D1D0D1
     padding: 0 15px
 .menu
     width: 60px
-.sync
-    width: 72px
-.search
-    width: 60px
-.cart
-    width: 72px
-.view-open
-    float: right
+.btn-group
+    @include prefix(display, flex)
+    .sync
+        width: 60px
+    .search
+        width: 60px
+    .cart
+        width: 60px
+    .view-open
+        float: right
+        
+// under mobile and tablet
+@media screen and (min-width: $sidebar_width + ($min_container_width * 2))
+    .menu
+        display: none
