--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -21,6 +21,15 @@ container
     background-color: #777
     box-sizing: border-box
     transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05)
+    .sidebar-close
+        display: none
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        opacity: .2
+        background-color: red
 
 navigation
     position: relative
