--- a/www/components/recipenote.html
+++ b/www/components/recipenote.html
@@ -5,4 +5,5 @@
         <list></list>
         <view edit="off" active="off"></view>
     </content>
+    <div class="sidebar-close"></div>
 </container>
