--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -115,5 +115,5 @@ content
     sidebar
         position: fixed
         transform: translateX($sidebar_width * -1)
-    sidebar[active=on]
+    sidebar.active
         transform: translateX(0)
