--- a/www/components/button/nav-button/nav-button.html
+++ b/www/components/button/nav-button/nav-button.html
@@ -1,5 +1,5 @@
 <button class="btn-default btn-nav">
     <icon></icon>
     <span>{{title}}</span>
-    <effect></effect>
+    <effect [class.animating]="animating"></effect>
 </button>
