--- a/www/components/recipenote.html
+++ b/www/components/recipenote.html
@@ -1,4 +1,4 @@
-<sidebar active="off"></sidebar>
+<sidebar #side [class.active]="active"></sidebar>
 <container>
     <navigation></navigation>
     <content>
