--- a/www/components/sidebar/sidebar.html
+++ b/www/components/sidebar/sidebar.html
@@ -1,2 +1,3 @@
-<button class="sidebar-close">메뉴닫기</button>
+<button class="sidebar-close" [class.active]="active">메뉴닫기</button>
+<div (click)="toggle();">1234</div>
 side-bar
