--- a/app/components/navigation/navigation.html
+++ b/app/components/navigation/navigation.html
@@ -1,5 +1,5 @@
 <div class="panel">
-    <span class="nav-item btn-nav menu" title="M" (click)="side.toggle();"></span>
+    <span class="nav-item btn-nav menu" title="M" (click)="sidebar.toggle();"></span>
     <h2 class="nav-item title">Navigation</h2>
     <div class="btn-group">
         <span class="nav-item btn-nav sync" title="Y"></span>
