--- a/www/components/sidebar/sidebar.html
+++ b/www/components/sidebar/sidebar.html
@@ -1,3 +1,2 @@
-<button class="sidebar-close" [class.active]="active">메뉴닫기</button>
-<div (click)="toggle();">1234</div>
+<button class="sidebar-close" (click)="hide();">메뉴닫기</button>
 side-bar
