--- a/app/components/common.sass
+++ b/app/components/common.sass
@@ -1,6 +1,7 @@
 // Definitions
 $vendors: -webkit- -moz- -ms- -o-
-$sidebar_width: 230px
+$sidebar_width: 280px
+$min_sidebar_width: 250px
 $navbar_height: 50px
 $min_container_width: 360px
 $max_container_width: $min_container_width * 2
