--- a/app/components/list/list.html
+++ b/app/components/list/list.html
@@ -1,1 +1,14 @@
-<div id="list-inner">list</div>
+<div id="list-inner">
+    <item>
+        item1
+        <click-effect></click-effect>
+    </item>
+    <item>
+        item2
+        <click-effect></click-effect>
+    </item>
+    <item>
+        item3
+        <click-effect></click-effect>
+    </item>
+</div>
