--- a/app/components/navigation/navigation.sass
+++ b/app/components/navigation/navigation.sass
@@ -10,7 +10,7 @@
 .title
     width: 100%
     line-height: $navbar_height
-    background-color: #D1D0D1
+    background-color: #EA3556
     padding: 0 15px
 .menu
     width: 60px
