--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -1,2 +1,15 @@
-<button class="sidebar-close" (click)="hide();">메뉴닫기</button>
-side-bar
+<h1 class="logo">SIDE BAR</h1>
+<div class="wrapper">
+    <section class="labels">
+        <div class="sidebar-item btn-sidebar" title="ALL-ALL-ALL"></div>
+        <div class="sidebar-item btn-sidebar" title="label one"></div>
+        <div class="sidebar-item btn-sidebar" title="label two"></div>
+        <div class="sidebar-item btn-sidebar" title="label three"></div>
+    </section>
+    <section class="tools">
+        <div class="sidebar-item btn-sidebar" title="Market"></div>
+        <div class="sidebar-item btn-sidebar" title="Waste basket"></div>
+        <div class="sidebar-item btn-sidebar" title="Sync data"></div>
+        <div class="sidebar-item btn-sidebar" title="Logout"></div>
+    </section>
+</div>
