--- a/app/components/list/list.sass
+++ b/app/components/list/list.sass
@@ -3,7 +3,18 @@
 #list-inner
     position: relative
     flex: 1 1 auto
+    margin-top: 10px
     width: 100%
     height: 100%
     box-sizing: border-box
-    background-color: #555
+
+item
+    position: relative
+    display: block
+    box-sizing: border-box
+    width: 100%
+    height: 150px
+    line-height: 150px
+    text-align: center
+    cursor: pointer
+    background-color: #43B6B9
