--- a/app/components/sidebar/sidebar.sass
+++ b/app/components/sidebar/sidebar.sass
@@ -1,4 +1,24 @@
 @import '../common'
 
-.sidebar-close
-    display: inline-block
+.wrapper
+    position: absolute
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center    
+    box-sizing: border-box
+    width: 100%
+    height: auto
+    top: 100px
+    bottom: 100px
+    padding: 0 10px
+    background-color: #464D57
+    .labels
+        box-sizing: border-box
+        width: 100%
+        border-bottom: 1px solid #888
+        background-color: #5D646E
+    .tools
+        box-sizing: border-box
+        width: 100%
+        background-color: #5D646E
