--- a/www/components/button/button.html
+++ b/www/components/button/button.html
@@ -1,5 +1,5 @@
-<button class="btn-default">
+<button>
     <icon></icon>
     <span>{{title}}</span>
-    <effect [class.animating]="animating"></effect>
+    <effect [attr.animating]="animating"></effect>
 </button>
