--- a/www/components/button/nav-button/nav-button/nav-button.html
+++ b/www/components/button/nav-button/nav-button/nav-button.html
@@ -1,4 +1,4 @@
-<button>
+<button class="btn-default btn-nav">
     <icon></icon>
     <span>{{title}}</span>
     <effect [attr.animating]="animating"></effect>
