--- a/www/components/navigation/navigation.html
+++ b/www/components/navigation/navigation.html
@@ -1,6 +1,6 @@
 <div class="panel">
     <span class="nav-item btn-nav menu" title="M" (click)="click();"></span>
-    <h2 class="nav-item title">Navigation</h2>
+    <h2 class="nav-item title">NAV-TITLE</h2>
     <div class="btn-group">
         <span class="nav-item btn-nav sync" title="Y"></span>
         <span class="nav-item btn-nav search" title="S"></span>
