--- a/www/components/recipenote.css
+++ b/www/components/recipenote.css
@@ -1,15 +1,17 @@
 sidebar {
-  position: relative;
+  position: fixed;
+  z-index: 20;
   flex: 0 0 auto;
-  z-index: 100;
-  width: 230px;
-  height: 100%;
-  background-color: #999;
   bottom: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  width: 65%;
+  min-width: 250px;
+  height: 100%;
+  background-color: #323943; }
 
 container {
   position: relative;
+  z-index: 30;
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
@@ -19,15 +21,15 @@ container {
   background-color: #777;
   box-sizing: border-box;
   transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05); }
-  container .sidebar-close {
+  container .sidebar-close-area {
     display: none;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: .2;
-    background-color: red; }
+    opacity: .7;
+    background-color: #9BF0E9; }
 
 navigation {
   position: relative;
@@ -49,7 +51,6 @@ content {
   content list {
     position: relative;
     display: flex;
-    padding: 7px;
     flex-direction: column;
     flex: 0 0 auto;
     width: 50%;
@@ -57,7 +58,8 @@ content {
     max-width: 720px;
     height: auto;
     box-sizing: border-box;
-    background-color: #333; }
+    background-color: #EDE5E2;
+    border-right: 1px solid #888; }
   content view {
     position: relative;
     display: flex;
@@ -68,10 +70,7 @@ content {
     min-width: 360px;
     height: auto;
     box-sizing: border-box;
-    background-color: #444; }
-
-.test {
-  transform: translate3d(60%, 0, 0) scale3d(0.85, 0.85, 1); }
+    background-color: #EDE5E2; }
 
 @media screen and (max-width: 720px) {
   content view[active=on] {
@@ -84,7 +83,6 @@ content {
     transform: translateX(0);
     transition: all 300ms ease; }
   content list {
-    padding: 0;
     width: 100%; } }
 
 @media screen and (min-width: 720px) {
@@ -93,15 +91,13 @@ content {
   content view .nav-back {
     display: none; } }
 
-@media screen and (min-width: 950px) {
-  sidebar .sidebar-close {
-    display: none; }
-  navigation .sidebar-open {
-    display: none; } }
-
-@media screen and (max-width: 950px) {
+@media screen and (min-width: 1000px) {
   sidebar {
-    position: fixed;
-    transform: translateX(-230px); }
-  sidebar.active {
-    transform: translateX(0); } }
+    position: relative;
+    width: 280px; } }
+
+@media screen and (max-width: 1000px) {
+  container .sidebar-close-area[active=true] {
+    display: block; }
+  container[active=true] {
+    transform: translate3d(60%, 0, 0) scale3d(0.85, 0.85, 1); } }
