--- a/www/styles.css
+++ b/www/styles.css
@@ -27,8 +27,10 @@ h2 {
 app {
     position: relative;
     display: flex;
+    overflow: hidden;
     flex-direction: row;
     flex-wrap: nowrap;
     width: 100%;
     height: 100%;
+    background-color: #323943;
 }
