--- a/www/components/button/button.css
+++ b/www/components/button/button.css
@@ -1,4 +1,4 @@
-button {
+:host {
   border: 0;
   position: relative;
   display: inline-block;
@@ -19,26 +19,3 @@ button {
   line-height: 40px;
   font-size: inherit;
   padding: 0 15px; }
-
-effect {
-  display: block;
-  position: absolute;
-  border-radius: inherit;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
-  background-color: #fff;
-  transition: all 150ms;
-  -webkit-transition: all 150ms;
-  -moz-transition: all 150ms;
-  -ms-transition: all 150ms;
-  -o-transition: all 150ms; }
-
-effect.bg-gray {
-  background-color: #999; }
-
-effect[animating=true] {
-  opacity: 0.3 !important; }
