--- a/www/components/button/nav-button/nav-button.html
+++ b/www/components/button/nav-button/nav-button.html
@@ -1,5 +1,3 @@
-<button>
-    <icon></icon>
-    <span>{{title}}</span>
-    <effect [attr.animating]="animating"></effect>
-</button>
+<icon></icon>
+<span>{{title}}</span>
+<click-effect></click-effect>
