--- a/www/components/navigation/navigation.html
+++ b/www/components/navigation/navigation.html
@@ -1,9 +1,9 @@
 <div class="panel">
-    <span class="nav-item btn-nav menu" title="M" (click)="click();"></span>
+    <nav-button class="nav-item menu" title="M" (btnClick)="clickMenu();"></nav-button>
     <h2 class="nav-item title">NAV-TITLE</h2>
     <div class="btn-group">
-        <span class="nav-item btn-nav sync" title="Y"></span>
-        <span class="nav-item btn-nav search" title="S"></span>
-        <span class="nav-item btn-nav cart" title="C"></span>
+        <nav-button class="nav-item sync" name="sync" title="Y"></nav-button>
+        <nav-button class="nav-item search" title="S"></nav-button>
+        <nav-button class="nav-item cart" title="C"></nav-button>
     </div>
 </div>
