--- a/www/components/recipenote.html
+++ b/www/components/recipenote.html
@@ -2,7 +2,7 @@
 <container [attr.active]="sidebarActive">
     <navigation (menuClick)="toggleSidebar();"></navigation>
     <content>
-        <list>12345</list>
+        <list></list>
         <view></view>
     </content>
     <div class="sidebar-close-area" [attr.active]="[sidebarActive]" (click)="hideSidebar();"></div>
