--- a/www/components/sidebar/sidebar.html
+++ b/www/components/sidebar/sidebar.html
@@ -1,15 +1,15 @@
 <h1 class="logo">SIDE BAR</h1>
 <div class="wrapper">
     <section class="labels">
-        <div class="sidebar-item btn-sidebar" title="ALL-ALL-ALL"></div>
-        <div class="sidebar-item btn-sidebar" title="label one"></div>
-        <div class="sidebar-item btn-sidebar" title="label two"></div>
-        <div class="sidebar-item btn-sidebar" title="label three"></div>
+        <sidebar-button class="sidebar-item" title="ALL-ALL-ALL"></sidebar-button>
+        <sidebar-button class="sidebar-item" title="label one"></sidebar-button>
+        <sidebar-button class="sidebar-item" title="label two"></sidebar-button>
+        <sidebar-button class="sidebar-item" title="label three"></sidebar-button>
     </section>
     <section class="tools">
-        <div class="sidebar-item btn-sidebar" title="Market"></div>
-        <div class="sidebar-item btn-sidebar" title="Waste basket"></div>
-        <div class="sidebar-item btn-sidebar" title="Sync data"></div>
-        <div class="sidebar-item btn-sidebar" title="Logout"></div>
+        <sidebar-button class="sidebar-item" title="Market"></sidebar-button>
+        <sidebar-button class="sidebar-item" title="Waste basket"></sidebar-button>
+        <sidebar-button class="sidebar-item" title="Sync data"></sidebar-button>
+        <sidebar-button class="sidebar-item" title="Logout"></sidebar-button>
     </section>
 </div>
