--- a/www/components/view/view.html
+++ b/www/components/view/view.html
@@ -1,10 +1,5 @@
 <div id="view-inner">
-    <header id="view-navbar">
-        <div class="panel">
-            <button class="box nav-back">돌아가기</button>
-            view-navbar
-        </div>
-    </header>
+    <navigation></navigation>
     <div id="view-content">view-content</div>
     <footer id="view-toolbox">view-toolbox</footer>
 </div>
