--- a/app/components/list/list.sass
+++ b/app/components/list/list.sass
@@ -16,4 +16,4 @@ item
     line-height: 150px
     text-align: center
     cursor: pointer
-    background-color: #43B6B9
+    background-color: #EDDE45
