--- a/www/components/list/list.css
+++ b/www/components/list/list.css
@@ -14,4 +14,4 @@ item {
   line-height: 150px;
   text-align: center;
   cursor: pointer;
-  background-color: #43B6B9; }
+  background-color: #EDDE45; }
