--- a/app/components/navigation/navigation.html
+++ b/app/components/navigation/navigation.html
@@ -1,4 +1,4 @@
 <div class="panel">
     <nav-button name="back" title="back" (btnClick)="onClick($event);"></nav-button>
-    <h2 #h2>{{title}}</h2>
+    <h2>{{title}}</h2>
 </div>
