--- a/app/components/navigation/navigation.sass
+++ b/app/components/navigation/navigation.sass
@@ -7,20 +7,13 @@
         display: inline-block
         box-sizing: border-box
         height: 100%
-h2
-    width: 100%
-    line-height: $navbar_height
-    background-color: #EA3556
-    padding: 0 15px
 [name=back]
     width: 60px
-right-panel
-    @include prefix(display, flex)
-    .sync
+btn-group
+    @include prefix(display, flex !important)
+    [name=sync]
         width: 60px
-    .search
+    [name=search]
         width: 60px
-    .cart
+    [name=cart]
         width: 60px
-    .view-open
-        float: right
