--- a/www/components/navigation/navigation.css
+++ b/www/components/navigation/navigation.css
@@ -1,11 +1,11 @@
-.panel {
+panel {
   display: flex;
   -webkit-display: flex;
   -moz-display: flex;
   -ms-display: flex;
   -o-display: flex;
   height: 100%; }
-  .panel > * {
+  panel > * {
     display: inline-block;
     box-sizing: border-box;
     height: 100%; }
