--- a/app/components/navigation/navigation.html
+++ b/app/components/navigation/navigation.html
@@ -1,4 +1,4 @@
-<panel>
+<!-- <panel>
     <button nav name="menu" title="M"></button>
     <title nav title={{title}}></title>
     <btn-group>
@@ -6,4 +6,4 @@
         <button nav name="search" title="S"></button>
         <button nav name="cart" title="C"></button>
     </btn-group>
-</panel>
+</panel> -->
