--- a/app/components/sidebar/sidebar.sass
+++ b/app/components/sidebar/sidebar.sass
@@ -1,11 +1,11 @@
-@import '../common'
+@import '../../common'
 
 .wrapper
     position: absolute
     display: flex
     flex-direction: column
     justify-content: center
-    align-items: center    
+    align-items: center
     box-sizing: border-box
     width: 100%
     height: auto
