--- a/app/directives/nav/nav.sass
+++ b/app/directives/nav/nav.sass
@@ -1,7 +1,11 @@
 @import '../../common'
 
-:host
+nav title
+    display: inline-block
     width: 100%
     line-height: $navbar_height
     background-color: #EA3556
     padding: 0 15px
+
+btn-group
+    @include prefix(display, flex !important)
