--- a/app/directives/panel/panel.sass
+++ b/app/directives/panel/panel.sass
@@ -1,7 +1,7 @@
 @import '../../common'
 
-:host
+panel
+    @include prefix(display, flex)
     width: 100%
-    line-height: $navbar_height
+    height: 100%
     background-color: #EA3556
-    padding: 0 15px
